--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=Victor
-password=1234
-dburl=jdbc:mysql://localhost:3306/coursejdbc
+password=12345678
+dburl=jdbc:mysql://localhost:3306/cursojdbc
 useSSL=false
