--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=Victor
 password=12345678
-dburl=jdbc:mysql://localhost:3306/cursojdbc
+dburl=jdbc:mysql://localhost:3306/demojdbc
 useSSL=false
